--- a/client/app/components/postSelected/postSelected.component.html
+++ b/client/app/components/postSelected/postSelected.component.html
@@ -13,6 +13,6 @@
         </div>
     </section>
 
-    <add-comment></add-comment>
+    <!--<add-comment></add-comment>-->
     <comment-list-wrapper></comment-list-wrapper>
 </div>
