--- a/client/app/components/comment/comment.component.html
+++ b/client/app/components/comment/comment.component.html
@@ -1,18 +1,34 @@
 <div class="comment">
     <div>
-        <div class="comment-author">{{comment.author}}</div>
+        <div class="comment-author">{{comment.authorName}}</div>
         •&nbsp;&nbsp;
-        <div class="comment-date">{{comment.date | date: "dd.MM.yy"}}</div>
+        <div class="comment-date">{{comment.dateAdded | date: "dd.MM.yy"}}</div>
     </div>
     <div class="comment-content">{{comment.content}}</div>
 
     <div class="comment-reply">
-        <button type="button" (click)="reply()">Reply</button>
-        <textarea *ngIf="showReply" placeholder="Your reply..."></textarea>
+        <button type="button" (click)="toggleReply()">Reply</button>
+
+        <form *ngIf="showReply" (ngSubmit)="submitReply()" #postForm="ngForm">
+            <input type="text" id="add-comment-author-name"
+                   required
+                   [(ngModel)]="commentReply.authorName"
+                   placeholder="Your name"
+                   name="authorName"
+                   #authorName="ngModel">
+            <br>
+            <textarea type="text"
+                      [(ngModel)]="commentReply.content"
+                      placeholder="Your reply..."
+                      required
+                      name="content"
+                      #content="ngModel">
+            </textarea>
+            <button type="submit">Submit</button>
+        </form>
     </div>
 
     <div *ngIf="comment.children" style="margin-left: 30px;">
-        <comment-list [comments]="comment.children">
-        </comment-list>
+        <comment-list [comments]="comment.children" [selectedPost]="selectedPost"></comment-list>
     </div>
 </div>
