--- a/client/app/components/postSelected/postSelected.component.html
+++ b/client/app/components/postSelected/postSelected.component.html
@@ -1,5 +1,5 @@
 <div class="selected-post">
-    <section>
+    <section *ngIf="selectedPost">
         <span id="title">{{selectedPost.title}}</span>
         <div id="name-date-wrap">
             <span id="name">{{selectedPost.authorName}}</span>
@@ -13,6 +13,6 @@
         </div>
     </section>
 
-    <!--<add-comment></add-comment>-->
-    <comment-list-wrapper></comment-list-wrapper>
+    <comment-list-wrapper *ngIf="selectedPost" [selectedPost]="selectedPost"></comment-list-wrapper>
+    <add-comment *ngIf="selectedPost" [selectedPost]="selectedPost"></add-comment>
 </div>
