--- a/client/src/app/components/add-post-comment/add-post-comment.component.css
+++ b/client/src/app/components/add-post-comment/add-post-comment.component.css
@@ -1,3 +1,35 @@
 .add-comment {
-    margin: 0px 0px 40px 40px;
+    margin: 30px 0px 40px 40px;
 }
+
+.add-comment > form {
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    background-color: #ffffff;
+}
+
+.add-comment > form > textarea {
+    width: 400px;
+    height: 70px;
+    resize: none;
+    overflow: scroll;
+    font-size: 14px;
+    margin-bottom: 15px;
+    border: 1px solid #dadada;
+    border-radius: 2px;
+}
+
+.add-comment > form > input {
+    width: 250px;
+    font-size: 14px;
+    margin-bottom: 20px;
+    border: 1px solid #dadada;
+}
+
+/*.add-comment > form > button {
+    background-color: #ffffff;
+    width: 100px;
+}*/
+
