--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -1,4 +1,23 @@
+html {
+    height: 100%;
+}
+
 body {
-    background: #0147A7;
-    color: #fff;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    background-color: #f5f5f5;
+}
+
+a {
+    text-decoration: none;
+    color: #2179b4;
+}
+
+.comment-list-wrapper > .comment-list {
+    border: none;
+}
+
+.comment-list-wrapper > .comment-list .comment-list {
+    border-left: 1px dotted #8f8f8f;
 }
