Added tinymce wysiwyg editor to 'Add new post'. Server side rewritten with koa web framework instead of express

--- a/client/src/app/components/add-post-comment/add-post-comment.component.html
+++ b/client/src/app/components/add-post-comment/add-post-comment.component.html
@@ -17,6 +17,6 @@
                name="authorName"
                placeholder="Your name"
                #authorName="ngModel">
-        <button md-button type="submit">Add comment</button>
+        <button md-raised-button type="submit">Add comment</button>
     </form>
 </div>
